--- a/css/creative.css
+++ b/css/creative.css
@@ -172,4 +172,49 @@ img::-moz-selection {
   background: transparent;
 }
 
+.box2 {
+	background: #ffffff;
+	height: 125px;
+	width: 125px;
+	display: block;
+	border-radius: 3px;
+	border: 1px solid #e9e9e9;
+	box-shadow: 0 1px 4px 0px rgba(0,0,0,.05);
+	font-weight: 700;
+}
+.profilebox{
+	width: 125px;
+	height: 125px;
+	display: block;
+}
 
+.profileimage{
+	margin: auto;
+	width: 110px;
+	height: 110px;
+	border-radius: 50%;
+	background: #444;
+	position: relative;
+	display: block;
+	top: 5px;
+}
+
+.profileimage img {
+	margin: auto;
+	width: 110px;
+    height: 110px;
+	border-radius: 50%;
+	top: 2px;
+	position: relative;
+	display: block;
+	z-index: 100;
+	}
+	
+.scrollToTop{
+ position: fixed;
+ bottom: 40px;
+ right: 40px;
+ z-index: 1;
+opacity: 0.7;
+ display:none;
+	}
